--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,12 @@ authors = [
 ]
 description = "A dummy package for learning how to create a REST API"
 readme = "README.md"
-license = { text = "GPL-3.0-only" }
+license = { text = "MIT" }
 requires-python = ">=3.6"
 keywords = []
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: GPL-3.0-only",
+    "License :: MIT",
     "Operating System :: OS Independent",
 ]
 
